Fix alignment of server status badge.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,4 +13,11 @@ body {
   color: #333;
 }
 
+.status-badge {
+    padding: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+}
 
